--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,92 +9,10 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">0</td><td class="num attn">1</td><td class="num">0</td><td class="num">0</td><td class="num">32</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">31,267</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; failed (configuration methods)</th></tr><tr class="failedeven"><td rowspan="1">tests.android.LoginTest</td><td><a href="#m0">serverStart</a></td><td rowspan="1">1708772826876</td><td rowspan="1">20129</td></tr><tr><th colspan="4">Default test &#8212; skipped (configuration methods)</th></tr><tr class="skippedeven"><td rowspan="3">tests.android.LoginTest</td><td><a href="#m1">closeApp</a></td><td rowspan="1">1708772847041</td><td rowspan="1">-1708772847041</td></tr><tr class="skippedeven"><td><a href="#m2">launchApp</a></td><td rowspan="1">1708772847036</td><td rowspan="1">-1708772847036</td></tr><tr class="skippedeven"><td><a href="#m3">serverStop</a></td><td rowspan="1">1708772847106</td><td rowspan="1">-1708772847106</td></tr><tr><th colspan="4">Default test &#8212; skipped</th></tr><tr class="skippedeven"><td rowspan="1">tests.android.LoginTest</td><td><a href="#m4">launchAPPtest</a></td><td rowspan="1">1708772847038</td><td rowspan="1">0</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">tests.android.LoginTest</td><td><a href="#m0">launchAPPtest</a></td><td rowspan="1">1708838914213</td><td rowspan="1">5736</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">tests.android.LoginTest#serverStart</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">io.appium.java_client.service.local.AppiumServerHasNotBeenStartedLocallyException: The local appium server has not been started
-Reason: Timed out waiting for [http://127.0.0.1:4723/status] to be available after 20005 ms
-Consider increasing the server startup timeout value (currently 20000ms)
-Node.js executable path: C:\Program Files\nodejs\node.exe
-Arguments: [C:\Users\Chan\AppData\Roaming\npm\node_modules\appium\build\lib\main.js, --port, 4723, --address, 127.0.0.1, --log, C:\Users\Chan\OneDrive\Desktop\Test Automation\Question 1\Maven_todoits_project\Appiumlog.txt, --allow-insecure, chromedriver_autodownload, --local-timezone, --use-plugins, gestures]
-Output: Tried to attach logging to file &apos;C:\Users\Chan\OneDrive\Desktop\Test Automation\Question 1\Maven_todoits_project\Appiumlog.txt&apos; but an error occurred: EBUSY: resource busy or locked, unlink &apos;C:\Users\Chan\OneDrive\Desktop\Test Automation\Question 1\Maven_todoits_project\Appiumlog.txt&apos;
-Fatal Error: Could not load the plugin &apos;gestures&apos; because it is not installed. You don&apos;t have any plugins installed yet.
-    at getActivePlugins (C:\Users\Chan\AppData\Roaming\npm\node_modules\appium\lib\extension\index.js:106:15)
-    at main (C:\Users\Chan\AppData\Roaming\npm\node_modules\appium\lib\main.js:343:47)
-
-	at io.appium.java_client.service.local.AppiumDriverLocalService.start(AppiumDriverLocalService.java:201)
-	at base.AppiumServer.start(AppiumServer.java:46)
-	at base.BaseTest.serverStart(BaseTest.java:30)
-	at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:103)
-	at java.base/java.lang.reflect.Method.invoke(Method.java:580)
-	at org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:133)
-	at org.testng.internal.MethodInvocationHelper.invokeMethodConsideringTimeout(MethodInvocationHelper.java:62)
-	at org.testng.internal.ConfigInvoker.invokeConfigurationMethod(ConfigInvoker.java:385)
-	at org.testng.internal.ConfigInvoker.invokeConfigurations(ConfigInvoker.java:321)
-	at org.testng.SuiteRunner.privateRun(SuiteRunner.java:317)
-	at org.testng.SuiteRunner.run(SuiteRunner.java:276)
-	at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:53)
-	at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:96)
-	at org.testng.TestNG.runSuitesSequentially(TestNG.java:1212)
-	at org.testng.TestNG.runSuitesLocally(TestNG.java:1134)
-	at org.testng.TestNG.runSuites(TestNG.java:1063)
-	at org.testng.TestNG.run(TestNG.java:1031)
-	at org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:115)
-	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:251)
-	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:77)
-Caused by: org.openqa.selenium.net.UrlChecker$TimeoutException: Timed out waiting for [http://127.0.0.1:4723/status] to be available after 20005 ms
-	at org.openqa.selenium.net.UrlChecker.waitUntilAvailable(UrlChecker.java:94)
-	at io.appium.java_client.service.local.AppiumDriverLocalService.ping(AppiumDriverLocalService.java:157)
-	at io.appium.java_client.service.local.AppiumDriverLocalService.start(AppiumDriverLocalService.java:180)
-	... 19 more
-Caused by: java.util.concurrent.TimeoutException
-	at java.base/java.util.concurrent.FutureTask.get(FutureTask.java:204)
-	at org.openqa.selenium.net.UrlChecker.waitUntilAvailable(UrlChecker.java:91)
-	... 21 more
-</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">tests.android.LoginTest#closeApp</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">tests.android.LoginTest#launchApp</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">tests.android.LoginTest#serverStop</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">tests.android.LoginTest#launchAPPtest</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">io.appium.java_client.service.local.AppiumServerHasNotBeenStartedLocallyException: The local appium server has not been started
-Reason: Timed out waiting for [http://127.0.0.1:4723/status] to be available after 20005 ms
-Consider increasing the server startup timeout value (currently 20000ms)
-Node.js executable path: C:\Program Files\nodejs\node.exe
-Arguments: [C:\Users\Chan\AppData\Roaming\npm\node_modules\appium\build\lib\main.js, --port, 4723, --address, 127.0.0.1, --log, C:\Users\Chan\OneDrive\Desktop\Test Automation\Question 1\Maven_todoits_project\Appiumlog.txt, --allow-insecure, chromedriver_autodownload, --local-timezone, --use-plugins, gestures]
-Output: Tried to attach logging to file &apos;C:\Users\Chan\OneDrive\Desktop\Test Automation\Question 1\Maven_todoits_project\Appiumlog.txt&apos; but an error occurred: EBUSY: resource busy or locked, unlink &apos;C:\Users\Chan\OneDrive\Desktop\Test Automation\Question 1\Maven_todoits_project\Appiumlog.txt&apos;
-Fatal Error: Could not load the plugin &apos;gestures&apos; because it is not installed. You don&apos;t have any plugins installed yet.
-    at getActivePlugins (C:\Users\Chan\AppData\Roaming\npm\node_modules\appium\lib\extension\index.js:106:15)
-    at main (C:\Users\Chan\AppData\Roaming\npm\node_modules\appium\lib\main.js:343:47)
-
-	at io.appium.java_client.service.local.AppiumDriverLocalService.start(AppiumDriverLocalService.java:201)
-	at base.AppiumServer.start(AppiumServer.java:46)
-	at base.BaseTest.serverStart(BaseTest.java:30)
-	at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:103)
-	at java.base/java.lang.reflect.Method.invoke(Method.java:580)
-	at org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:133)
-	at org.testng.internal.MethodInvocationHelper.invokeMethodConsideringTimeout(MethodInvocationHelper.java:62)
-	at org.testng.internal.ConfigInvoker.invokeConfigurationMethod(ConfigInvoker.java:385)
-	at org.testng.internal.ConfigInvoker.invokeConfigurations(ConfigInvoker.java:321)
-	at org.testng.SuiteRunner.privateRun(SuiteRunner.java:317)
-	at org.testng.SuiteRunner.run(SuiteRunner.java:276)
-	at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:53)
-	at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:96)
-	at org.testng.TestNG.runSuitesSequentially(TestNG.java:1212)
-	at org.testng.TestNG.runSuitesLocally(TestNG.java:1134)
-	at org.testng.TestNG.runSuites(TestNG.java:1063)
-	at org.testng.TestNG.run(TestNG.java:1031)
-	at org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:115)
-	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:251)
-	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:77)
-Caused by: org.openqa.selenium.net.UrlChecker$TimeoutException: Timed out waiting for [http://127.0.0.1:4723/status] to be available after 20005 ms
-	at org.openqa.selenium.net.UrlChecker.waitUntilAvailable(UrlChecker.java:94)
-	at io.appium.java_client.service.local.AppiumDriverLocalService.ping(AppiumDriverLocalService.java:157)
-	at io.appium.java_client.service.local.AppiumDriverLocalService.start(AppiumDriverLocalService.java:180)
-	... 19 more
-Caused by: java.util.concurrent.TimeoutException
-	at java.base/java.util.concurrent.FutureTask.get(FutureTask.java:204)
-	at org.openqa.selenium.net.UrlChecker.waitUntilAvailable(UrlChecker.java:91)
-	... 21 more
-</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">tests.android.LoginTest#launchAPPtest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
