--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b2f2a2">  <td>24/02/24 19:07:27</td>   <td>0</td> <td title="&lt;&lt;BaseTest.serverStop()[pri:0, instance:tests.android.LoginTest@1d9b7cce]">&lt;&lt;serverStop</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="b2f2a2">  <td>24/02/24 19:07:27</td>   <td>-70</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchApp()[pri:0, instance:tests.android.LoginTest@1d9b7cce]">&gt;&gt;launchApp</td> 
-<td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="647b92">  <td>24/02/24 19:07:27</td>   <td>-68</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.launchAPPtest()[pri:0, instance:tests.android.LoginTest@1d9b7cce]">launchAPPtest</td> 
+<tr bgcolor="688e88">  <td>24/02/25 13:28:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp(org.testng.ITestResult)[pri:0, instance:tests.android.LoginTest@158da8e]">&lt;&lt;closeApp</td> 
+<td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="c86f8d">  <td>24/02/25 13:28:34</td>   <td>-5739</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.launchAPPtest()[pri:0, instance:tests.android.LoginTest@158da8e]">launchAPPtest</td> 
   <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="b2f2a2">  <td>24/02/24 19:07:27</td>   <td>-65</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp()[pri:0, instance:tests.android.LoginTest@1d9b7cce]">&lt;&lt;closeApp</td> 
-<td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="b2f2a2">  <td>24/02/24 19:07:06</td>   <td>-20226</td> <td title="&gt;&gt;BaseTest.serverStart()[pri:0, instance:tests.android.LoginTest@1d9b7cce]">&gt;&gt;serverStart</td> 
+<tr bgcolor="688e88">  <td>24/02/25 13:28:06</td>   <td>-33679</td> <td title="&gt;&gt;BaseTest.serverStart()[pri:0, instance:tests.android.LoginTest@158da8e]">&gt;&gt;serverStart</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="688e88">  <td>24/02/25 13:28:39</td>   <td>42</td> <td title="&lt;&lt;BaseTest.serverStop()[pri:0, instance:tests.android.LoginTest@158da8e]">&lt;&lt;serverStop</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="688e88">  <td>24/02/25 13:28:08</td>   <td>-31252</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchApp()[pri:0, instance:tests.android.LoginTest@158da8e]">&gt;&gt;launchApp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
 </table>
