--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,14 +1,32 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="688e88">  <td>24/02/25 13:28:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp(org.testng.ITestResult)[pri:0, instance:tests.android.LoginTest@158da8e]">&lt;&lt;closeApp</td> 
-<td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="c86f8d">  <td>24/02/25 13:28:34</td>   <td>-5739</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.launchAPPtest()[pri:0, instance:tests.android.LoginTest@158da8e]">launchAPPtest</td> 
+<tr bgcolor="c86f8d">  <td>24/02/25 15:10:35</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.invalidLogin_emptyUserNameTest()[pri:1, instance:tests.android.LoginTest@9f116cc]">invalidLogin_emptyUserNameTest</td> 
   <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="688e88">  <td>24/02/25 13:28:06</td>   <td>-33679</td> <td title="&gt;&gt;BaseTest.serverStart()[pri:0, instance:tests.android.LoginTest@158da8e]">&gt;&gt;serverStart</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="688e88">  <td>24/02/25 13:28:39</td>   <td>42</td> <td title="&lt;&lt;BaseTest.serverStop()[pri:0, instance:tests.android.LoginTest@158da8e]">&lt;&lt;serverStop</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="688e88">  <td>24/02/25 13:28:08</td>   <td>-31252</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchApp()[pri:0, instance:tests.android.LoginTest@158da8e]">&gt;&gt;launchApp</td> 
+<tr bgcolor="688e88">  <td>24/02/25 15:10:25</td>   <td>-10006</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchApp()[pri:0, instance:tests.android.LoginTest@9f116cc]">&gt;&gt;launchApp</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="688e88">  <td>24/02/25 15:10:53</td>   <td>17404</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp(org.testng.ITestResult)[pri:0, instance:tests.android.LoginTest@9f116cc]">&lt;&lt;closeApp</td> 
+<td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="c86f8d">  <td>24/02/25 15:10:47</td>   <td>11772</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.invalidLogin_Test(java.lang.String,java.lang.String,java.lang.String)[pri:3, instance:tests.android.LoginTest@9f116cc]">invalidLogin_Test</td> 
+  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="688e88">  <td>24/02/25 15:10:23</td>   <td>-12120</td> <td title="&gt;&gt;BaseTest.serverStart()[pri:0, instance:tests.android.LoginTest@9f116cc]">&gt;&gt;serverStart</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="688e88">  <td>24/02/25 15:10:53</td>   <td>17404</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp(org.testng.ITestResult)[pri:0, instance:tests.android.LoginTest@9f116cc]">&lt;&lt;closeApp</td> 
+<td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="c86f8d">  <td>24/02/25 15:10:33</td>   <td>-2504</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.setup()[pri:0, instance:tests.android.LoginTest@9f116cc]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="c86f8d">  <td>24/02/25 15:10:50</td>   <td>14629</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.validLoginTest()[pri:4, instance:tests.android.LoginTest@9f116cc]">validLoginTest</td> 
+  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="688e88">  <td>24/02/25 15:10:53</td>   <td>17404</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp(org.testng.ITestResult)[pri:0, instance:tests.android.LoginTest@9f116cc]">&lt;&lt;closeApp</td> 
+<td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="688e88">  <td>24/02/25 15:10:53</td>   <td>17437</td> <td title="&lt;&lt;BaseTest.serverStop()[pri:0, instance:tests.android.LoginTest@9f116cc]">&lt;&lt;serverStop</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="c86f8d">  <td>24/02/25 15:10:47</td>   <td>11772</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.invalidLogin_Test(java.lang.String,java.lang.String,java.lang.String)[pri:3, instance:tests.android.LoginTest@9f116cc]">invalidLogin_Test</td> 
+  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="688e88">  <td>24/02/25 15:10:53</td>   <td>17404</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp(org.testng.ITestResult)[pri:0, instance:tests.android.LoginTest@9f116cc]">&lt;&lt;closeApp</td> 
+<td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="688e88">  <td>24/02/25 15:10:53</td>   <td>17404</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp(org.testng.ITestResult)[pri:0, instance:tests.android.LoginTest@9f116cc]">&lt;&lt;closeApp</td> 
+<td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="c86f8d">  <td>24/02/25 15:10:41</td>   <td>5154</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.invalidLogin_emptyPasswordTest()[pri:2, instance:tests.android.LoginTest@9f116cc]">invalidLogin_emptyPasswordTest</td> 
+  <td>main@1159190947</td>   <td></td> </tr>
 </table>
