--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,14 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="688e88">  <td>24/02/25 16:34:41</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp(org.testng.ITestResult)[pri:0, instance:tests.android.ProductsTest@158da8e]">&lt;&lt;closeApp</td> 
-<td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="688e88">  <td>24/02/25 16:34:41</td>   <td>41</td> <td title="&lt;&lt;BaseTest.serverStop()[pri:0, instance:tests.android.ProductsTest@158da8e]">&lt;&lt;serverStop</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="c86f8d">  <td>24/02/25 16:34:26</td>   <td>-14377</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductsTest.ProductsValidateTest()[pri:0, instance:tests.android.ProductsTest@158da8e]">ProductsValidateTest</td> 
+<tr bgcolor="65c96b">  <td>24/02/25 18:25:08</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RestAssuredTest.test_2()[pri:0, instance:tests.android.RestAssuredTest@20deea7f]">test_2</td> 
   <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="688e88">  <td>24/02/25 16:34:14</td>   <td>-26675</td> <td title="&gt;&gt;BaseTest.serverStart()[pri:0, instance:tests.android.ProductsTest@158da8e]">&gt;&gt;serverStart</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="688e88">  <td>24/02/25 16:34:17</td>   <td>-24154</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchApp()[pri:0, instance:tests.android.ProductsTest@158da8e]">&gt;&gt;launchApp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="65c96b">  <td>24/02/25 18:25:06</td>   <td>-1612</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RestAssuredTest.test_1()[pri:0, instance:tests.android.RestAssuredTest@20deea7f]">test_1</td> 
+  <td>main@1159190947</td>   <td></td> </tr>
 </table>
